test/files/neg/t7325.check
t7325.scala:2: error: conversions must follow a splice; use %% for literal %, %n for newline
  println(f"%")
            ^
t7325.scala:4: error: conversions must follow a splice; use %% for literal %, %n for newline
  println(f"%%%")
              ^
t7325.scala:6: error: conversions must follow a splice; use %% for literal %, %n for newline
  println(f"%%%%%")
                ^
t7325.scala:16: error: wrong conversion string
  println(f"${0}%")
                ^
t7325.scala:19: error: conversions must follow a splice; use %% for literal %, %n for newline
  println(f"${0}%%%d")
                  ^
t7325.scala:21: error: conversions must follow a splice; use %% for literal %, %n for newline
  println(f"${0}%%%%%d")
                    ^
6 errors found
